# soma

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  dev.sh
sync/: .gitignore  cron-setup.sh  demo-seed.sql  pyproject.toml  schema.sql
sync/migrations/: 001_training_engine.sql  002_high_value_fields.sql  003_fix_telegram_rules.sql  004_push_notifications.sql  005_push_sync_rules.sql  006_nutrition_deficit_mode.sql  007_nutrition_deficit_phase.sql
sync/src/: activity_replacer.py  analyze_raw_data.py  backfill.py  backfill_kite_jumps.py  bpm_formula.py  bulk_fix.py  config.py  create_race_plan_workouts.py  db.py  delete_activity.py  dj_daemon.py  exercise_mapper.py  fit_generator.py  garmin_backfill.py  garmin_client.py  garmin_push.py  garmin_sync.py  hevy_client.py  hevy_sync.py  kite_jumps.py  parsers.py  pipeline.py  push_notify.py  push_single.py  reconciler.py  refinalize_strava.py  resend_telegram.py  router.py  shuffle.py  strava_backfill.py  strava_bridge.py  strava_bridge_push.py  strava_client.py  strava_description.py  strava_image_backfill.py  strava_push.py  strava_sync.py  strava_web.py  telegram_notify.py  upload_kite_photos.py
sync/tests/: test_activity_replacer.py  test_adaptive.py  test_alcohol.py  test_backfill.py  test_banister.py  test_banister_integration.py  test_bmr.py  test_body_comp_stream.py  test_bpm_formula.py  test_calibration.py  test_close_yesterday.py  test_completion.py  test_daily_plan.py  test_db_helpers.py  test_db_strava.py  test_deficit_duration.py  test_exercise_calories.py  test_exercise_mapper.py  test_fat_floor.py  test_fit_generator.py  test_fitness_stream.py  test_floor.py  test_forbes.py  test_garmin_sync.py  test_garmin_workout_builder.py  test_goal_deficit.py  test_hevy_client.py  test_hevy_sync.py  test_kite_jumps.py  test_kite_push.py  test_load_stream.py  test_macro_targets.py  test_merge.py  test_mode.py  test_mode_availability.py  test_mode_transitions.py  (+33 more)
(+540 files in other folders)
