[project]
name = "soma-sync"
version = "0.1.0"
description = "Soma health data sync engine"
requires-python = ">=3.10"
dependencies = [
    "garmin-auth>=0.2.0",
    "garminconnect>=0.2.38,<0.3.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "fit-tool>=0.9.15",
    "Pillow>=10.0",
    "pywebpush>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
